# fdh-rs

./: .travis.yml  Cargo.toml  README.md
movingwindow/: README.md
src/: lib.rs
src/movingwindow/: README.md  mod.rs
