[package]
name = "fdh"
version = "0.6.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
description = "Full Domain Hash (FDH) for extending the size of a hash digest to an arbitrary length"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/fdh-rs"
readme = "README.md"
keywords = ["hash", "crypto", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.8.1"
failure = {version = "0.1.7", optional = true}
num-bigint = { version = "0.6", optional=true, features = ["zeroize"], package = "num-bigint-dig" }
subtle = "2.2.2"

# Should use same version as in "digest"
generic-array = "0.12.3"

[dev-dependencies]
sha2 = "0.9.0"
sha-1 = "0.8.2"
sha3 = "0.8.2"
hex = "0.4.2"
num-traits = "0.2.11"
num-integer = "0.1.42"

[badges]
travis-ci = { repository = "phayes/fdh-rs", branch = "master" }
codecov = { repository = "phayes/fdh-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["digest/std", "num-bigint", "failure"]